# detekcja-anomalii-cuda

./: CMakeLists.txt  README.md  cpu_processing.cpp  cpu_processing.h  dane_testowe.csv  gpu_processing.cu  gpu_processing.h  main.cpp
